force-app/main/default/objects/RD_Outputs__c/RD_Outputs__c.object-meta.xml
<CustomObject>
    <label>RD Outputs</label>
    <nameField>
        <label>RD Outputs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>