force-app/main/default/objects/RD_Outputs__c/fields/Adder_Lead_Time_40__c.field-meta.xml
<CustomField>
    <fullName>Adder_Lead_Time_40__c</fullName>
    <label>Adder Lead Time 40</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>