force-app/main/default/objects/RD_Outputs__c/fields/Base_Lead_Time_GP__c.field-meta.xml
<CustomField>
    <fullName>Base_Lead_Time_GP__c</fullName>
    <label>Base_Lead Time GP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>