force-app/main/default/objects/RD_Outputs__c/fields/LABDSC__c.field-meta.xml
<CustomField>
    <fullName>LABDSC__c</fullName>
    <label>LABDSC</label>
    <type>TextArea</type>
</CustomField>