force-app/main/default/objects/RD_Outputs__c/fields/LABMAT__c.field-meta.xml
<CustomField>
    <fullName>LABMAT__c</fullName>
    <label>LABMAT</label>
    <type>TextArea</type>
</CustomField>