force-app/main/default/objects/RD_Outputs__c/fields/LABMAT_Override__c.field-meta.xml
<CustomField>
    <fullName>LABMAT_Override__c</fullName>
    <label>LABMAT Override</label>
    <type>TextArea</type>
</CustomField>