force-app/main/default/objects/RD_Outputs__c/fields/OA__c.field-meta.xml
<CustomField>
    <fullName>OA__c</fullName>
    <label>OA</label>
    <type>TextArea</type>
</CustomField>