force-app/main/default/objects/RD_Outputs__c/fields/OA_Override__c.field-meta.xml
<CustomField>
    <fullName>OA_Override__c</fullName>
    <label>OA Override</label>
    <type>TextArea</type>
</CustomField>