force-app/main/default/objects/RD_Outputs__c/fields/OB__c.field-meta.xml
<CustomField>
    <fullName>OB__c</fullName>
    <label>OB</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>