force-app/main/default/objects/RD_Outputs__c/fields/OB_Override__c.field-meta.xml
<CustomField>
    <fullName>OB_Override__c</fullName>
    <label>OB Override</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>