force-app/main/default/objects/RD_Outputs__c/fields/ORP010__c.field-meta.xml
<CustomField>
    <fullName>ORP010__c</fullName>
    <label>ORP010</label>
    <length>255</length>
    <type>Text</type>
</CustomField>