force-app/main/default/objects/RD_Outputs__c/fields/ORP015__c.field-meta.xml
<CustomField>
    <fullName>ORP015__c</fullName>
    <label>ORP015</label>
    <length>255</length>
    <type>Text</type>
</CustomField>