force-app/main/default/objects/RD_Outputs__c/fields/ORP020__c.field-meta.xml
<CustomField>
    <fullName>ORP020__c</fullName>
    <label>ORP020</label>
    <length>255</length>
    <type>Text</type>
</CustomField>