force-app/main/default/objects/RD_Outputs__c/fields/ORP_Override__c.field-meta.xml
<CustomField>
    <fullName>ORP_Override__c</fullName>
    <label>ORP Override</label>
    <type>TextArea</type>
</CustomField>