force-app/main/default/objects/RD_Outputs__c/fields/ORV010__c.field-meta.xml
<CustomField>
    <fullName>ORV010__c</fullName>
    <label>ORV010</label>
    <length>255</length>
    <type>Text</type>
</CustomField>