force-app/main/default/objects/RD_Outputs__c/fields/ORV015__c.field-meta.xml
<CustomField>
    <fullName>ORV015__c</fullName>
    <label>ORV015</label>
    <length>255</length>
    <type>Text</type>
</CustomField>