force-app/main/default/objects/RD_Outputs__c/fields/ORV020__c.field-meta.xml
<CustomField>
    <fullName>ORV020__c</fullName>
    <label>ORV020</label>
    <length>255</length>
    <type>Text</type>
</CustomField>