force-app/main/default/objects/RD_Outputs__c/fields/ORV_Override__c.field-meta.xml
<CustomField>
    <fullName>ORV_Override__c</fullName>
    <label>ORV Override</label>
    <type>TextArea</type>
</CustomField>