force-app/main/default/objects/RD_Outputs__c/fields/OW_Override__c.field-meta.xml
<CustomField>
    <fullName>OW_Override__c</fullName>
    <label>OW Override</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>