force-app/main/default/objects/RD_Outputs__c/fields/RD_Outputs_Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>RD_Outputs_Relation_Field__c</fullName>
    <label>RD Outputs Relation Field</label>
    <referenceTo>Rupture_Disc__c</referenceTo>
    <relationshipLabel>RD Outputs</relationshipLabel>
    <relationshipName>RD_Outputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>