force-app/main/default/objects/RD_Outputs__c/fields/SRV__c.field-meta.xml
<CustomField>
    <fullName>SRV__c</fullName>
    <label>SRV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>