force-app/main/default/objects/RD_Outputs__c/fields/Total_Lead_Time_GP_ORD__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Time_GP_ORD__c</fullName>
    <label>Total_Lead_Time_GP_ORD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>