force-app/main/default/objects/RD_Outputs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RD_Outputs_Relation_Field__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RD_Outputs_Relation_Field__c</field>
        <operation>equals</operation>
        <value>RD-0000548</value>
    </filters>
    <label>All</label>
</ListView>